--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>TSOL-Home</title>
+    <script async src="index.js"></script>
     <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
     <h1>Site In Progress</h1>
+<h4 id="date"></h4>
 </body>
 </html>
